--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,10 +12,15 @@ body {
 }
 
 #background {
-  background:url(../img/bg.jpg);
+  /*background:url(../img/bg.jpg);*/
   position:absolute;
+
   width:1280px;
   height:800px;
+}
+
+#globemaster {
+  margin-left:960px;
 }
 
 .parallax-sprite {
@@ -25,6 +30,11 @@ body {
 .page {
   position:absolute;
   width:960px;
+  
+}
+
+.page h1 {
+  background:rgba(255,255,255, 0.5);
 }
 
 .page-one {
